--- a/src/_includes/pages/frontend.njk
+++ b/src/_includes/pages/frontend.njk
@@ -18,10 +18,10 @@ plugins:
         >
         <div class="text-center rtl:lg:text-right ltr:lg:text-left self-start md:text-right">
             <h2 class="text-2xl font-bold sm:text-3xl">
-                إتقان تطوير الواجهة الخلفية: تعلم الأساسيات من منزلك في ثلاثة أشهر فقط!            
+                احتراف تطوير الواجهات الأمامية: تصميم واجهات إبداعية وعصرية     
             </h2>
             <p class="mt-4 text-gray-600 text-lg mb-4 md:mb-0">
-                اختصر الوقت وتعلّم جميع أساسيات تطوير الواجهة الخلفية من خلال مشاريع تطبيقية ودروس عملية، في ثلاثة أشهر فقط!
+                كمطوّر  Front-End ستبدأ رحلتك بأساسيات تطوير الويب، ثم تتعمّق في الأدوات والتقنيات الحديثة المطلوبة ، وكل ذلك من خلال التطبيق العملي والمشاريع الحقيقية.
             </p>
             <div class="mx-auto max-w-none flex justify-around items-center flex-col md:flex-row gap-2 md:gap-0" x-data >
             <a class="btn text-white bg-green-primary w-full px-0  md:my-6 " href="#pricing" >
@@ -39,7 +39,7 @@ plugins:
         <div
         class="relative h-[360px] overflow-hidden rounded-lg max-h-72 md:max-h-full p-0 md:w-1/3"
         >
-        {% image "src/assets/images/ajincodew_man.tif", "woman smilling", ["webp","png"], [600,1200], "(min-width: 780px) 720px, 518px", {class:"absolute inset-0 h-full mx-auto w-fit object-contain"} %}
+        {% image "src/assets/images/Front-end_ajincodew.svg", "woman smilling", ["svg","svg"], [600,1200], "(min-width: 780px) 720px, 518px", {class:"absolute inset-0 h-full mx-auto w-fit object-contain"} %}
         </div>
     </div>
     </section>
@@ -57,7 +57,7 @@ plugins:
                             <span class="px-2 py-1">
                                 <i class="fas fa-check"></i>
                             </span>
-                            <p>مراجعة Java والبرمجة الكائنية (OOP)
+                            <p>مقدمة في الويب وكيف يعمل: فهم طريقة عمل المتصفحات، خوادم الويب، والبروتوكولات.</p>
                             <br class='md:hidden'>
                             </p>
                         </li>
@@ -65,7 +65,7 @@ plugins:
                             <span class="px-2 py-1">
                                 <i class="fas fa-check"></i>
                             </span>
-                            <p> مراجعة أنماط التصميم (Design Patterns)
+                            <p>أساسيات HTML, CSS, JavaScript من الصفر إلى الاحتراف
                             <br class='md:hidden'>
                             </p>
                         </li>
@@ -73,24 +73,8 @@ plugins:
                             <span class="px-2 py-1">
                                 <i class="fas fa-check"></i>
                             </span>
-                            <p>  Spring Core: فهم أساسيات Spring وكيفية عمله
-                            <br class='md:hidden'>
-                            </p>
-                        </li>
-                        <li class='flex items-start flex-row mb-1.5 '>
-                            <span class="px-2 py-1">
-                                <i class="fas fa-check"></i>
-                            </span>
-                            <p>   Spring Boot: تطوير تطبيقات Spring بسهولة وسرعة
-                            <br class='md:hidden'>
-                            </p>
-                        </li>
-                        <li class='flex items-start flex-row mb-1.5 '>
-                            <span class="px-2 py-1">
-                                <i class="fas fa-check"></i>
-                            </span>
-                            <p>   
-                                Spring Beans in Action: فهم مكونات Spring Beans وكيفية إدارتها
+                            <p>  
+                            استخدام مكتبات وأطر العمل الحديثة مثل React.js 
                             <br class='md:hidden'>
                             </p>
                         </li>
@@ -99,7 +83,7 @@ plugins:
                                 <i class="fas fa-check"></i>
                             </span>
                             <p>   
-                                Dependency Injection (DI): التعرف على مبدأ الحقن في Spring لتحسين إدارة الكود
+                            تعلم متقدم لجافا سكريبت (Advanced JavaScript) وتحسين مهارات البرمجة
                             <br class='md:hidden'>
                             </p>
                         </li>
@@ -108,7 +92,7 @@ plugins:
                                 <i class="fas fa-check"></i>
                             </span>
                             <p>   
-                                Spring Special Beans: التعامل مع Beans الخاصة في Spring
+                            تحسين تجربة المستخدم  لتطوير مواقع فعالة وسهلة الاستخدام
                             <br class='md:hidden'>
                             </p>
                         </li>
@@ -117,7 +101,7 @@ plugins:
                                 <i class="fas fa-check"></i>
                             </span>
                             <p>   
-                                Spring Profiles: استخدام الـ Profiles لإدارة إعدادات التطبيقات حسب البيئة
+                            إتقان Bootstrap و Tailwind CSS لإنشاء تصاميم احترافية بسرعة وكفاءة
                             <br class='md:hidden'>
                             </p>
                         </li>
@@ -126,7 +110,7 @@ plugins:
                                 <i class="fas fa-check"></i>
                             </span>
                             <p>   
-                                Spring Data JPA: إدارة قواعد البيانات باستخدام Spring Data JPA
+                            بناء مواقع متجاوبة (Responsive Design) باستخدام Flexbox و Grid  
                             <br class='md:hidden'>
                             </p>
                         </li>
@@ -135,7 +119,7 @@ plugins:
                                 <i class="fas fa-check"></i>
                             </span>
                             <p>   
-                                DTO Pattern: تطبيق نمط DTO لفصل البيانات بين الطبقات
+                            تعلم أساسيات SEO لضمان ظهور المواقع في نتائج البحث  
                             <br class='md:hidden'>
                             </p>
                         </li>
@@ -144,7 +128,7 @@ plugins:
                                 <i class="fas fa-check"></i>
                             </span>
                             <p>   
-                                Service Layer: بناء طبقة الخدمات في التطبيقات
+                            تحسين أداء المواقع وسرعة تحميل الصفحات (Optimization)  
                             <br class='md:hidden'>
                             </p>
                         </li>
@@ -153,7 +137,7 @@ plugins:
                                 <i class="fas fa-check"></i>
                             </span>
                             <p>   
-                                Spring Data Validation: التحقق من صحة البيانات في Spring
+                            استخدام أدوات التحكم Git و GitHub لإدارة المشاريع  
                             <br class='md:hidden'>
                             </p>
                         </li>
@@ -162,7 +146,7 @@ plugins:
                                 <i class="fas fa-check"></i>
                             </span>
                             <p>   
-                                تطوير RESTful API: بناء وتطوير واجهات API باستخدام REST
+                            نشر المشاريع على الإنترنت واستضافة المواقع (Hosting & Deployment)  
                             <br class='md:hidden'>
                             </p>
                         </li>
@@ -171,34 +155,7 @@ plugins:
                                 <i class="fas fa-check"></i>
                             </span>
                             <p>   
-                                تطوير SOAP API: إنشاء Web Services باستخدام SOAP
-                            <br class='md:hidden'>
-                            </p>
-                        </li>
-                        <li class='flex items-start flex-row mb-1.5 '>
-                            <span class="px-2 py-1">
-                                <i class="fas fa-check"></i>
-                            </span>
-                            <p>   
-                                اختبار الـ API باستخدام Postman: تجربة واختبار الـ API لضمان جودته
-                            <br class='md:hidden'>
-                            </p>
-                        </li>
-                        <li class='flex items-start flex-row mb-1.5 '>
-                            <span class="px-2 py-1">
-                                <i class="fas fa-check"></i>
-                            </span>
-                            <p>   
-                                Spring Security + OAuth 2.0 لحماية الـ APIs
-                            <br class='md:hidden'>
-                            </p>
-                        </li>
-                        <li class='flex items-start flex-row mb-1.5 '>
-                            <span class="px-2 py-1">
-                                <i class="fas fa-check"></i>
-                            </span>
-                            <p>   
-                                Spring Cloud & Microservices: إذا كنت ترغب في العمل مع الأنظمة الموزعة
+                            تعلم أساسيات ومبادئ WordPress  
                             <br class='md:hidden'>
                             </p>
                         </li>
@@ -213,35 +170,38 @@ plugins:
             يتضمن هذا تدريب :
         </h2>
         <ul class="text-gray-700 text-base md:text-lg list-inside pt-3 ">
-            <li class=' flex items-start mb-1'>
+            <li class="flex items-start mb-1">
                 <span class="fa-solid fa-users-rectangle w-8 p-1"></span>
-                <p>حصص برمجة (Google Meet)</p>
+                <p>حصص برمجة مباشرة عبر Google Meet</p>
             </li>
-            <li class=' flex items-start mb-1'>
+            <li class="flex items-start mb-1">
                 <span class="fa-solid fa-code w-8 p-1"></span>
-                <p>مشاريع برمجية</p>
+                <p>مشاريع برمجية تطبيقية</p>
             </li>
-            <li class=' flex items-start mb-1'>
+            <li class="flex items-start mb-1">
+                <span class="fa-solid fa-flask w-8 p-1"></span>
+                <p>تمارين تطبيقية لتعزيز الفهم</p>
+            </li>
+            <li class="flex items-start mb-1">
+                <span class="fa-solid fa-list-check w-8 p-1"></span>
+                <p>كويزات (أسئلة متعددة الاختيارات) لاختبار المعرفة</p>
+            </li>
+            <li class="flex items-start mb-1">
                 <span class="fa-solid fa-award w-8 p-1"></span>
                 <p>شهادة معتمدة</p>
             </li>
-            <li class=' flex items-start mb-1'>
+            <li class="flex items-start mb-1">
                 <span class="fa-brands fa-whatsapp w-8 p-1"></span>
-                <p>متابعة شخصية</p>
+                <p>متابعة شخصية مع المدربين</p>
             </li>
-            <li class=' flex items-start mb-1'>
+            <li class="flex items-start mb-1">
                 <span class="fa-regular fa-file-code w-8 p-1"></span>
-                <p>أكتر من 20 ملفات دروس</p>
+                <p>أكثر من 20 ملف دروس مفصلة</p>
             </li>
         </ul>
     </section>
-
-
-    
 </div>
     
-
-
     <section id="trainings" class='relative max-w-7xl mx-auto sm:px-6 mb-6 pt-6 mt-'>
         <p class='text-center text-2xl md:text-3xl font-bold mb-2'>أكثر من مجرد تدريب</p>
         <div class="grid grid-cols-1 gap-4 mt-6 md:gap-12 md:mt-12 md:grid-cols-2 lg:grid-cols-3">
@@ -281,33 +241,33 @@ plugins:
         <div class="flex flex-col justify-center items-start px-4">
             <p class="text-2xl md:text-3xl font-bold text-right text-neutral-600 mb-2">الاستثمار الذي سيغير حياتك للأبد !</p>
             <ul class="text-right space-y-1">
-                <li class="flex items-start ml-auto gap-3">
-                    <p class="text-lg text-[#4c4c4c]"><i class="fas fa-users-rectangle"></i></p>
-                    <p class="text-lg text-right text-[#4c4c4c]">حصص برمجية</p>
+                <li class="flex items-start mb-1">
+                    <span class="fa-solid fa-users-rectangle w-8 p-1"></span>
+                    <p>حصص برمجة مباشرة عبر Google Meet</p>
                 </li>
-                <li class="flex items-start ml-auto gap-3">
-                    <p class="text-lg text-[#4c4c4c]"><i class="fas fa-award"></i></p>
-                    <p class="text-lg text-right text-[#4c4c4c]">شهادة معتمدة</p>
+                <li class="flex items-start mb-1">
+                    <span class="fa-solid fa-code w-8 p-1"></span>
+                    <p>مشاريع برمجية تطبيقية</p>
                 </li>
-                <li class="flex items-start ml-auto gap-3">
-                    <p class="text-lg text-[#4c4c4c]"><i class="fab fa-code"></i></p>
-                    <p class="text-lg text-right text-[#4c4c4c]">مشاريع برمجية</p>
+                <li class="flex items-start mb-1">
+                    <span class="fa-solid fa-flask w-8 p-1"></span>
+                    <p>تمارين تطبيقية لتعزيز الفهم</p>
                 </li>
-                <li class="flex items-start ml-auto gap-3">
-                    <p class="text-lg text-[#4c4c4c]"><i class="fab fa-whatsapp"></i></p>
-                    <p class="text-lg text-right text-[#4c4c4c]">متابعة شخصية</p>
+                <li class="flex items-start mb-1">
+                    <span class="fa-solid fa-list-check w-8 p-1"></span>
+                    <p>كويزات (أسئلة متعددة الاختيارات) لاختبار المعرفة</p>
                 </li>
-                <li class="flex items-start ml-auto gap-3">
-                    <p class="text-lg text-[#4c4c4c]"><i class="fas fa-code"></i></p>
-                    <p class="text-lg text-right text-[#4c4c4c]">تمارين تطبيقية</p>
+                <li class="flex items-start mb-1">
+                    <span class="fa-solid fa-award w-8 p-1"></span>
+                    <p>شهادة معتمدة</p>
                 </li>
-                <li class="flex items-start ml-auto gap-3">
-                    <p class="text-lg text-[#4c4c4c]"><i class="fas fa-file-code"></i></p>
-                    <p class="text-lg text-right text-[#4c4c4c]">20+ ملفات دروس</p>
+                <li class="flex items-start mb-1">
+                    <span class="fa-brands fa-whatsapp w-8 p-1"></span>
+                    <p>متابعة شخصية مع المدربين</p>
                 </li>
-                <li class="flex items-start ml-auto gap-3">
-                    <p class="text-lg text-[#4c4c4c]"><i class="fas fa-video-camera"></i></p>
-                    <p class="text-lg text-right text-[#4c4c4c]">تسجيلات الحصص المباشرة</p>
+                <li class="flex items-start mb-1">
+                    <span class="fa-regular fa-file-code w-8 p-1"></span>
+                    <p>أكثر من 20 ملف دروس مفصلة</p>
                 </li>
             </ul>
         </div>
@@ -327,7 +287,7 @@ plugins:
                         <a class="text-lg md:text-xl font-semibold text-right text-white">درهم</a>              
                     </div>
                         <p class="text-sm text-white text-right mb-2">هذا العرض يمكنك من الاستفادة من التدريب كاملاً (3 أشهر) بدفع مرة واحدة.</p>     
-                        <a href="https://api.whatsapp.com/send?phone=212612527672&text=%D8%A8%D8%BA%D9%8A%D8%AA%20%D9%86%D8%B3%D8%AC%D9%84%20%D9%81%D9%8A%20%D8%A7%D9%84%D8%AA%D8%AF%D8%B1%D9%8A%D8%A8%20%D8%AF%D9%8A%D8%A7%D9%84%20%D8%AA%D8%B7%D9%88%D9%8A%D8%B1%20%D8%A7%D9%84%D9%88%D8%A7%D8%AC%D9%87%D8%A9%20%D8%A7%D9%84%D8%AE%D9%84%D9%81%D9%8A%D8%A9%20%D8%A8%D8%A7%D9%84%D8%B9%D8%B1%D8%B6%20%D8%AF%D9%8A%D8%A7%D9%84%20%D8%AB%D9%84%D8%A7%D8%AB%D8%A9%20%D8%B4%D9%87%D9%88%D8%B1%20%D8%A8%D9%80%20599%20%D8%AF%D8%B1%D9%87%D9%85."
+                        <a href="https://api.whatsapp.com/send?phone=212612527672&text=%D8%A8%D8%BA%D9%8A%D8%AA%20%D9%86%D8%B3%D8%AC%D9%84%20%D9%81%D9%8A%20%D8%A7%D9%84%D8%AA%D8%AF%D8%B1%D9%8A%D8%A8%20%D8%AF%D9%8A%D8%A7%D9%84%20%D8%AA%D8%B7%D9%88%D9%8A%D8%B1%20%D8%A7%D9%84%D9%88%D8%A7%D8%AC%D9%87%D8%A9%20%D8%A7%D9%84%D8%A3%D9%85%D8%A7%D9%85%D9%8A%D8%A9%20%D8%A8%D8%A7%D9%84%D8%B9%D8%B1%D8%B6%20%D8%AF%D9%8A%D8%A7%D9%84%20%D8%AB%D9%84%D8%A7%D8%AB%D8%A9%20%D8%B4%D9%87%D9%88%D8%B1%20%D8%A8%D9%80%20599%20%D8%AF%D8%B1%D9%87%D9%85."
                             onClick="fbq('track', 'Lead')" 
                             class="w-full py-1 rounded-md bg-white text-base md:text-lg font-medium text-center text-red-primary">تسجيل</a>
                 </div> 
@@ -339,7 +299,7 @@ plugins:
                         <p class="text-lg md:text-xl font-semibold text-right text-gray-600 ">درهم</p>                     
                     </div>
                     <p class="text-sm text-gray-600 text-right mb-2">هذا العرض يمكنك من الاستفادة من التدريب بدفع شهري.</p>                
-                    <a href="https://api.whatsapp.com/send?phone=212612527672&text=%D8%A8%D8%BA%D9%8A%D8%AA%20%D9%86%D8%B3%D8%AC%D9%84%20%D9%81%D9%8A%20%D8%A7%D9%84%D8%AA%D8%AF%D8%B1%D9%8A%D8%A8%20%D8%AF%D9%8A%D8%A7%D9%84%20%D8%AA%D8%B7%D9%88%D9%8A%D8%B1%20%D8%A7%D9%84%D9%88%D8%A7%D8%AC%D9%87%D8%A9%20%D8%A7%D9%84%D8%AE%D9%84%D9%81%D9%8A%D8%A9%20%D8%A8%D8%A7%D9%84%D8%B9%D8%B1%D8%B6%20%D8%AF%D9%8A%D8%A7%D9%84%20249%20%D8%AF%D8%B1%D9%87%D9%85%20%D9%81%D8%A7%D9%84%D8%B4%D9%87%D8%B1."
+                    <a href="https://api.whatsapp.com/send?phone=212612527672&text=%D8%A8%D8%BA%D9%8A%D8%AA%20%D9%86%D8%B3%D8%AC%D9%84%20%D9%81%D9%8A%20%D8%A7%D9%84%D8%AA%D8%AF%D8%B1%D9%8A%D8%A8%20%D8%AF%D9%8A%D8%A7%D9%84%20%D8%AA%D8%B7%D9%88%D9%8A%D8%B1%20%D8%A7%D9%84%D9%88%D8%A7%D8%AC%D9%87%D8%A9%20%D8%A7%D9%84%D8%A3%D9%85%D8%A7%D9%85%D9%8A%D8%A9%20%D8%A8%D8%A7%D9%84%D8%B9%D8%B1%D8%B6%20%D8%AF%D9%8A%D8%A7%D9%84%20249%20%D8%AF%D8%B1%D9%87%D9%85%20%D9%81%D8%A7%D9%84%D8%B4%D9%87%D8%B1."
                     target="_blank"
                     onClick="fbq('track', 'Lead')" 
                     class="w-full py-1 rounded-md bg-green-primary text-base md:text-lg font-medium text-center text-white">
