--- a/src/_includes/pages/informatique-bureautique.njk
+++ b/src/_includes/pages/informatique-bureautique.njk
@@ -18,10 +18,10 @@ plugins:
         >
         <div class="text-center rtl:lg:text-right ltr:lg:text-left self-start md:text-right">
             <h2 class="text-2xl font-bold sm:text-3xl">
-                إتقان تطوير الواجهة الخلفية: تعلم الأساسيات من منزلك في ثلاثة أشهر فقط!            
+                تدريب المعلوميات المكتبية: مهارات ضرورية لسوق الشغل          
             </h2>
             <p class="mt-4 text-gray-600 text-lg mb-4 md:mb-0">
-                اختصر الوقت وتعلّم جميع أساسيات تطوير الواجهة الخلفية من خلال مشاريع تطبيقية ودروس عملية، في ثلاثة أشهر فقط!
+                في عالم العمل والدراسة اليوم، أصبح إتقان استخدام الحاسوب وبرامج Microsoft Office أمرًا أساسيًا لتحقيق النجاح وزيادة الإنتاجية. هذه الدورة ستمنحك المهارات التي تحتاجها لاستخدام برامج مثل Word ، Excel، PowerPoint ، مما سيسهم في تحسين أدائك الشخصي والمهني
             </p>
             <div class="mx-auto max-w-none flex justify-around items-center flex-col md:flex-row gap-2 md:gap-0" x-data >
             <a class="btn text-white bg-green-primary w-full px-0  md:my-6 " href="#pricing" >
@@ -39,7 +39,7 @@ plugins:
         <div
         class="relative h-[360px] overflow-hidden rounded-lg max-h-72 md:max-h-full p-0 md:w-1/3"
         >
-        {% image "src/assets/images/ajincodew_man.tif", "woman smilling", ["webp","png"], [600,1200], "(min-width: 780px) 720px, 518px", {class:"absolute inset-0 h-full mx-auto w-fit object-contain"} %}
+        {% image "src/assets/images/Office365_ajincodew.svg", "woman smilling", ["svg","svg"], [600,1200], "(min-width: 780px) 720px, 518px", {class:"absolute inset-0 h-full mx-auto w-fit object-contain"} %}
         </div>
     </div>
     </section>
@@ -57,7 +57,8 @@ plugins:
                             <span class="px-2 py-1">
                                 <i class="fas fa-check"></i>
                             </span>
-                            <p>مراجعة Java والبرمجة الكائنية (OOP)
+                            <p>
+                            مقدمة في عالم الأوفيس office365
                             <br class='md:hidden'>
                             </p>
                         </li>
@@ -65,7 +66,8 @@ plugins:
                             <span class="px-2 py-1">
                                 <i class="fas fa-check"></i>
                             </span>
-                            <p> مراجعة أنماط التصميم (Design Patterns)
+                            <p> 
+                            تعلم كتابة ومعالجة النصوص في Word 
                             <br class='md:hidden'>
                             </p>
                         </li>
@@ -73,7 +75,8 @@ plugins:
                             <span class="px-2 py-1">
                                 <i class="fas fa-check"></i>
                             </span>
-                            <p>  Spring Core: فهم أساسيات Spring وكيفية عمله
+                            <p>  
+                            إدارة المستندات باحترافية في Microsoft Word 
                             <br class='md:hidden'>
                             </p>
                         </li>
@@ -81,25 +84,8 @@ plugins:
                             <span class="px-2 py-1">
                                 <i class="fas fa-check"></i>
                             </span>
-                            <p>   Spring Boot: تطوير تطبيقات Spring بسهولة وسرعة
-                            <br class='md:hidden'>
-                            </p>
-                        </li>
-                        <li class='flex items-start flex-row mb-1.5 '>
-                            <span class="px-2 py-1">
-                                <i class="fas fa-check"></i>
-                            </span>
-                            <p>   
-                                Spring Beans in Action: فهم مكونات Spring Beans وكيفية إدارتها
-                            <br class='md:hidden'>
-                            </p>
-                        </li>
-                        <li class='flex items-start flex-row mb-1.5 '>
-                            <span class="px-2 py-1">
-                                <i class="fas fa-check"></i>
-                            </span>
-                            <p>   
-                                Dependency Injection (DI): التعرف على مبدأ الحقن في Spring لتحسين إدارة الكود
+                            <p> 
+                            إنشاء الجداول وتحليل البيانات باستخدام Excel
                             <br class='md:hidden'>
                             </p>
                         </li>
@@ -108,7 +94,7 @@ plugins:
                                 <i class="fas fa-check"></i>
                             </span>
                             <p>   
-                                Spring Special Beans: التعامل مع Beans الخاصة في Spring
+                            تنسيق المستندات والطباعة بشكل احترافي
                             <br class='md:hidden'>
                             </p>
                         </li>
@@ -117,7 +103,7 @@ plugins:
                                 <i class="fas fa-check"></i>
                             </span>
                             <p>   
-                                Spring Profiles: استخدام الـ Profiles لإدارة إعدادات التطبيقات حسب البيئة
+                            تصميم نماذج وقواعد بيانات بسيطة في Excel  
                             <br class='md:hidden'>
                             </p>
                         </li>
@@ -126,7 +112,7 @@ plugins:
                                 <i class="fas fa-check"></i>
                             </span>
                             <p>   
-                                Spring Data JPA: إدارة قواعد البيانات باستخدام Spring Data JPA
+                            تعلم إدخال البيانات بسرعة وكفاءة عالية 
                             <br class='md:hidden'>
                             </p>
                         </li>
@@ -135,7 +121,7 @@ plugins:
                                 <i class="fas fa-check"></i>
                             </span>
                             <p>   
-                                DTO Pattern: تطبيق نمط DTO لفصل البيانات بين الطبقات
+                            تقنيات الأتمتة والتعامل مع وحدات الماكرو في Excel  
                             <br class='md:hidden'>
                             </p>
                         </li>
@@ -144,7 +130,7 @@ plugins:
                                 <i class="fas fa-check"></i>
                             </span>
                             <p>   
-                                Service Layer: بناء طبقة الخدمات في التطبيقات
+                            إعداد العروض التقديمية الإبداعية في PowerPoint
                             <br class='md:hidden'>
                             </p>
                         </li>
@@ -152,53 +138,8 @@ plugins:
                             <span class="px-2 py-1">
                                 <i class="fas fa-check"></i>
                             </span>
-                            <p>   
-                                Spring Data Validation: التحقق من صحة البيانات في Spring
-                            <br class='md:hidden'>
-                            </p>
-                        </li>
-                        <li class='flex items-start flex-row mb-1.5 '>
-                            <span class="px-2 py-1">
-                                <i class="fas fa-check"></i>
-                            </span>
-                            <p>   
-                                تطوير RESTful API: بناء وتطوير واجهات API باستخدام REST
-                            <br class='md:hidden'>
-                            </p>
-                        </li>
-                        <li class='flex items-start flex-row mb-1.5 '>
-                            <span class="px-2 py-1">
-                                <i class="fas fa-check"></i>
-                            </span>
-                            <p>   
-                                تطوير SOAP API: إنشاء Web Services باستخدام SOAP
-                            <br class='md:hidden'>
-                            </p>
-                        </li>
-                        <li class='flex items-start flex-row mb-1.5 '>
-                            <span class="px-2 py-1">
-                                <i class="fas fa-check"></i>
-                            </span>
-                            <p>   
-                                اختبار الـ API باستخدام Postman: تجربة واختبار الـ API لضمان جودته
-                            <br class='md:hidden'>
-                            </p>
-                        </li>
-                        <li class='flex items-start flex-row mb-1.5 '>
-                            <span class="px-2 py-1">
-                                <i class="fas fa-check"></i>
-                            </span>
-                            <p>   
-                                Spring Security + OAuth 2.0 لحماية الـ APIs
-                            <br class='md:hidden'>
-                            </p>
-                        </li>
-                        <li class='flex items-start flex-row mb-1.5 '>
-                            <span class="px-2 py-1">
-                                <i class="fas fa-check"></i>
-                            </span>
-                            <p>   
-                                Spring Cloud & Microservices: إذا كنت ترغب في العمل مع الأنظمة الموزعة
+                            <p>  
+                            التعلم المتقدم للوورد والإكسل (مهارات متقدمة)
                             <br class='md:hidden'>
                             </p>
                         </li>
@@ -213,25 +154,33 @@ plugins:
             يتضمن هذا تدريب :
         </h2>
         <ul class="text-gray-700 text-base md:text-lg list-inside pt-3 ">
-            <li class=' flex items-start mb-1'>
+           <li class="flex items-start mb-1">
                 <span class="fa-solid fa-users-rectangle w-8 p-1"></span>
-                <p>حصص برمجة (Google Meet)</p>
+                <p>حصص برمجة مباشرة عبر Google Meet</p>
             </li>
-            <li class=' flex items-start mb-1'>
+            <li class="flex items-start mb-1">
                 <span class="fa-solid fa-code w-8 p-1"></span>
-                <p>مشاريع برمجية</p>
+                <p>مشاريع برمجية تطبيقية</p>
             </li>
-            <li class=' flex items-start mb-1'>
+            <li class="flex items-start mb-1">
+                <span class="fa-solid fa-flask w-8 p-1"></span>
+                <p>تمارين تطبيقية لتعزيز الفهم</p>
+            </li>
+            <li class="flex items-start mb-1">
+                <span class="fa-solid fa-list-check w-8 p-1"></span>
+                <p>كويزات (أسئلة متعددة الاختيارات) لاختبار المعرفة</p>
+            </li>
+            <li class="flex items-start mb-1">
                 <span class="fa-solid fa-award w-8 p-1"></span>
                 <p>شهادة معتمدة</p>
             </li>
-            <li class=' flex items-start mb-1'>
+            <li class="flex items-start mb-1">
                 <span class="fa-brands fa-whatsapp w-8 p-1"></span>
-                <p>متابعة شخصية</p>
+                <p>متابعة شخصية مع المدربين</p>
             </li>
-            <li class=' flex items-start mb-1'>
+            <li class="flex items-start mb-1">
                 <span class="fa-regular fa-file-code w-8 p-1"></span>
-                <p>أكتر من 20 ملفات دروس</p>
+                <p>أكثر من 20 ملف دروس مفصلة</p>
             </li>
         </ul>
     </section>
@@ -281,33 +230,33 @@ plugins:
         <div class="flex flex-col justify-center items-start px-4">
             <p class="text-2xl md:text-3xl font-bold text-right text-neutral-600 mb-2">الاستثمار الذي سيغير حياتك للأبد !</p>
             <ul class="text-right space-y-1">
-                <li class="flex items-start ml-auto gap-3">
-                    <p class="text-lg text-[#4c4c4c]"><i class="fas fa-users-rectangle"></i></p>
-                    <p class="text-lg text-right text-[#4c4c4c]">حصص برمجية</p>
+                <li class="flex items-start mb-1">
+                    <span class="fa-solid fa-users-rectangle w-8 p-1"></span>
+                    <p>حصص برمجة مباشرة عبر Google Meet</p>
                 </li>
-                <li class="flex items-start ml-auto gap-3">
-                    <p class="text-lg text-[#4c4c4c]"><i class="fas fa-award"></i></p>
-                    <p class="text-lg text-right text-[#4c4c4c]">شهادة معتمدة</p>
+                <li class="flex items-start mb-1">
+                    <span class="fa-solid fa-code w-8 p-1"></span>
+                    <p>مشاريع برمجية تطبيقية</p>
                 </li>
-                <li class="flex items-start ml-auto gap-3">
-                    <p class="text-lg text-[#4c4c4c]"><i class="fab fa-code"></i></p>
-                    <p class="text-lg text-right text-[#4c4c4c]">مشاريع برمجية</p>
+                <li class="flex items-start mb-1">
+                    <span class="fa-solid fa-flask w-8 p-1"></span>
+                    <p>تمارين تطبيقية لتعزيز الفهم</p>
                 </li>
-                <li class="flex items-start ml-auto gap-3">
-                    <p class="text-lg text-[#4c4c4c]"><i class="fab fa-whatsapp"></i></p>
-                    <p class="text-lg text-right text-[#4c4c4c]">متابعة شخصية</p>
+                <li class="flex items-start mb-1">
+                    <span class="fa-solid fa-list-check w-8 p-1"></span>
+                    <p>كويزات (أسئلة متعددة الاختيارات) لاختبار المعرفة</p>
                 </li>
-                <li class="flex items-start ml-auto gap-3">
-                    <p class="text-lg text-[#4c4c4c]"><i class="fas fa-code"></i></p>
-                    <p class="text-lg text-right text-[#4c4c4c]">تمارين تطبيقية</p>
+                <li class="flex items-start mb-1">
+                    <span class="fa-solid fa-award w-8 p-1"></span>
+                    <p>شهادة معتمدة</p>
                 </li>
-                <li class="flex items-start ml-auto gap-3">
-                    <p class="text-lg text-[#4c4c4c]"><i class="fas fa-file-code"></i></p>
-                    <p class="text-lg text-right text-[#4c4c4c]">20+ ملفات دروس</p>
+                <li class="flex items-start mb-1">
+                    <span class="fa-brands fa-whatsapp w-8 p-1"></span>
+                    <p>متابعة شخصية مع المدربين</p>
                 </li>
-                <li class="flex items-start ml-auto gap-3">
-                    <p class="text-lg text-[#4c4c4c]"><i class="fas fa-video-camera"></i></p>
-                    <p class="text-lg text-right text-[#4c4c4c]">تسجيلات الحصص المباشرة</p>
+                <li class="flex items-start mb-1">
+                    <span class="fa-regular fa-file-code w-8 p-1"></span>
+                    <p>أكثر من 20 ملف دروس مفصلة</p>
                 </li>
             </ul>
         </div>
