--- a/src/assets/css/additional-styles/theme.css
+++ b/src/assets/css/additional-styles/theme.css
@@ -12,38 +12,38 @@ html {
 }
 
 /* Hamburger button */
-.hamburger svg>*:nth-child(1),
-.hamburger svg>*:nth-child(2),
-.hamburger svg>*:nth-child(3) {
+.hamburger svg > *:nth-child(1),
+.hamburger svg > *:nth-child(2),
+.hamburger svg > *:nth-child(3) {
     transform-origin: center;
     transform: rotate(0deg);
 }
 
-.hamburger svg>*:nth-child(1) {
+.hamburger svg > *:nth-child(1) {
     transition: y 0.1s 0.25s ease-in, transform 0.22s cubic-bezier(0.55, 0.055, 0.675, 0.19), opacity 0.1s ease-in;
 }
 
-.hamburger svg>*:nth-child(2) {
+.hamburger svg > *:nth-child(2) {
     transition: transform 0.22s cubic-bezier(0.55, 0.055, 0.675, 0.19);
 }
 
-.hamburger svg>*:nth-child(3) {
+.hamburger svg > *:nth-child(3) {
     transition: y 0.1s 0.25s ease-in, transform 0.22s cubic-bezier(0.55, 0.055, 0.675, 0.19), width 0.1s 0.25s ease-in;
 }
 
-.hamburger.active svg>*:nth-child(1) {
+.hamburger.active svg > *:nth-child(1) {
     opacity: 0;
     y: 11;
     transform: rotate(225deg);
     transition: y 0.1s ease-out, transform 0.22s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1), opacity 0.1s 0.12s ease-out;
 }
 
-.hamburger.active svg>*:nth-child(2) {
+.hamburger.active svg > *:nth-child(2) {
     transform: rotate(225deg);
     transition: transform 0.22s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1);
 }
 
-.hamburger.active svg>*:nth-child(3) {
+.hamburger.active svg > *:nth-child(3) {
     y: 11;
     transform: rotate(135deg);
     transition: y 0.1s ease-out, transform 0.22s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1), width 0.1s ease-out;
@@ -51,29 +51,54 @@ html {
 
 /* Pulsing animation */
 @keyframes pulseLoop {
-    0% { opacity: .15; transform: scale(1) translateZ(0); }
-    30% { opacity: .15; }
-    60% { opacity: 0; }
-    80% { opacity: 0; transform: scale(1.8) translateZ(0); }
+    0% {
+        opacity: .15;
+        transform: scale(1) translateZ(0);
+    }
+    30% {
+        opacity: .15;
+    }
+    60% {
+        opacity: 0;
+    }
+    80% {
+        opacity: 0;
+        transform: scale(1.8) translateZ(0);
+    }
 }
+
 @keyframes pulseMiniLoop {
-    0% { opacity: 0; transform: scale(1) translateZ(0); }
-    30% { opacity: .3; }
-    50% { opacity: .3; }
-    80% { opacity: 0; transform: scale(3) translateZ(0); }
+    0% {
+        opacity: 0;
+        transform: scale(1) translateZ(0);
+    }
+    30% {
+        opacity: .3;
+    }
+    50% {
+        opacity: .3;
+    }
+    80% {
+        opacity: 0;
+        transform: scale(3) translateZ(0);
+    }
 }
+
 .pulse {
     transform: scale(1);
     opacity: 0;
     transform-origin: center;
-    animation: pulseLoop 10000ms linear infinite;                                   
+    animation: pulseLoop 10000ms linear infinite;
 }
+
 .pulse-mini {
-    animation: pulseMiniLoop 6000ms linear infinite;                                   
+    animation: pulseMiniLoop 6000ms linear infinite;
 }
+
 .pulse-1 {
     animation-delay: -3000ms;
 }
+
 .pulse-2 {
     animation-delay: -6000ms;
 }
@@ -93,9 +118,9 @@ html {
 
 /* Custom AOS animations */
 [data-aos="zoom-y-out"] {
-  transform: scaleX(1.03);
-  opacity: 0;
-  transition-property: transform, opacity;
+    transform: scaleX(1.03);
+    opacity: 0;
+    transition-property: transform, opacity;
 }
 
 @media screen {
